# shop-gen

./: .env.example  .gitignore  pyproject.toml  railway.json  readme.md  start_web.py  web_server.py
app/: main.py
app/services/: archive_service.py  catalog_builder.py  deepseek_client.py  pexels_client.py  theme_selector.py
web/: index.html
